<resources>
    <string name="app_name">Movies</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="the_movies">The Movies</string>
    <string name="skip">Skip</string>
    <string name="onboarding_message_1">Discover \npremieres</string>
    <string name="onboarding_message_2">Create \ncollections</string>
    <string name="onboarding_message_3">Share \nwith friends</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="collection">Collection</string>
    <string name="collections">Collections</string>
    <string name="create_collection">Create own collection</string>
    <string name="all_items">All</string>
    <string name="to_list">To list</string>
    <string name="show_all_items">Show all</string>
    <string name="filmography">Filmography</string>
    <string name="seasons_and_episodes">Seasons and episodes</string>
    <string name="seasons_and_episodes_values">%1$s, %2$s</string>
    <string name="season">Season:</string>
    <string name="episode_n">%1$d episode. %2$s</string>
    <string name="unknown_general">unknown</string>
    <string name="season_n_episodes_n">%1$d season, %2$s</string>
    <string name="premieres">Premieres</string>
    <string name="popular">Popular</string>
    <string name="top250">TOP 250</string>
    <string name="hint_for_search_bar">Movies</string>
    <string name="hint_for_search_bar_settings_countries">Country</string>
    <string name="hint_for_search_bar_settings_genres">Genre</string>
    <string name="movie_was_not_found">Movie was not found</string>
    <string name="watched_movies">Watched movies</string>
    <string name="recent_movie_list">What you were interested in</string>
    <string name="delete_button">Delete button</string>
    <string name="enter_the_name_of_your_new_collection">Enter the name of your new collection</string>
    <string name="ready">Ready</string>
    <string name="enter_acceptable_name">Enter acceptable name</string>
    <string name="show_only_unwatched_movies">To show only unwatched movies</string>
    <string name="check_internet_connection">Check your Internet connection</string>
    <string name="something_went_wrong">Something went wrong. Try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="choose_period">Choose period, please</string>
    <string name="choose_start_year">Choose start year of period, please</string>
    <string name="choose_finish_year">Choose finish year of period, please</string>
    <string name="start_year_can_not_be_less_than_finish">Start year can not be less than finish year</string>
    <string name="only_first_400_images_are_available">Only first 400 images are available</string>

    <string name="writer">Writer</string>
    <string name="operator">Operator</string>
    <string name="editor">Editor</string>
    <string name="composer">Composer</string>
    <string name="producer_ussr">Producer</string>
    <string name="translator">Translator</string>
    <string name="director">Director</string>
    <string name="design">Design</string>
    <string name="producer">Producer</string>
    <string name="actor">Actor</string>
    <string name="voice_director">Voice director</string>
    <string name="unknown">Unknown</string>

    <string name="writer_key">Writer</string>
    <string name="operator_key">Operator</string>
    <string name="editor_key">Editor</string>
    <string name="composer_key">Composer</string>
    <string name="producer_ussr_key">Producer</string>
    <string name="himself_key">Himself</string>
    <string name="herself_key">Herself</string>
    <string name="hrono_titr_male_key">Hrono titr male</string>
    <string name="hrono_titr_female_key">Hrono titr female</string>
    <string name="translator_key">Translator</string>
    <string name="director_key">Director</string>
    <string name="design_key">Design</string>
    <string name="producer_key">Producer</string>
    <string name="actor_key">Actor</string>
    <string name="voice_director_key">Voice director</string>
    <string name="voice_male_key">Voice male</string>
    <string name="voice_female_key">Voice female</string>
    <string name="unknown_key">Unknown</string>
    <string name="the_best">The best</string>

    <string name="thriller">Thrillers</string>
    <string name="drama">Dramas</string>
    <string name="criminal">Crime movies</string>
    <string name="melodrama">Melodramas</string>
    <string name="detective">Detective movies</string>
    <string name="fiction">Fiction movies</string>
    <string name="adventure">Adventures</string>
    <string name="action">Action movies</string>
    <string name="fantasy">Fantasy</string>
    <string name="comedy">Comedy movies</string>
    <string name="horror">Horrors</string>
    <string name="cartoon">Cartoons</string>
    <string name="family">Family\'s movies</string>
    <string name="anime">Anime</string>
    <string name="children">Children\'s movies</string>

    <string name="usa">\u0020of USA</string>
    <string name="france">\u0020of France</string>
    <string name="poland">\u0020of Poland</string>
    <string name="uk">\u0020of UK</string>
    <string name="sweden">\u0020of Sweden</string>
    <string name="india">\u0020of India</string>
    <string name="spain">\u0020of Spain</string>
    <string name="germany">\u0020of Germany</string>
    <string name="italy">\u0020of Italy</string>
    <string name="japan">\u0020of Japan</string>
    <string name="china">\u0020of China</string>
    <string name="denmark">\u0020of Denmark</string>
    <string name="russia">\u0020of Russia</string>
    <string name="filters_button">Filters button</string>
    <string name="nothing_found_message">Unfortunately, nothing was found by your request</string>
    <string name="search_settings">Search settings</string>
    <string name="all">All</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="to_show">To show</string>
    <string name="country">Country</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="to_sort_by">To sort by</string>
    <string name="date">Date</string>
    <string name="popularity">Popularity</string>
    <string name="show">Show</string>
    <string name="reset">Reset</string>
    <string name="settings_reset">Search settings were reset</string>
    <string name="settings_genre_reset">Genre settings were reset</string>
    <string name="settings_country_reset">Country settings were reset</string>
    <string name="settings_year_range_reset">Year range settings were reset</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="search_from">Search from</string>
    <string name="search_to">Search to</string>
    <string name="search_range">Search range</string>
    <string name="apply">Apply</string>
    <string name="collection_is_empty">Collection is empty yet…</string>
    <string name="hours">h</string>
    <string name="minutes">min</string>
    <string name="actors">Actors</string>
    <string name="other_staff">Movie was made by</string>
    <string name="gallery">Gallery</string>
    <string name="similar_movies">Similar movies</string>

    <string name="still">Stills</string>
    <string name="shooting">Shooting</string>
    <string name="poster">Posters</string>
    <string name="fan_art">Fan Art</string>
    <string name="promo">Promo</string>
    <string name="concept">Concept</string>
    <string name="wallpaper">Wallpapers</string>
    <string name="cover">Covers</string>
    <string name="screenshot">Screenshots</string>

    <plurals name="count_movies">
        <item quantity="zero">%1$d movies</item>
        <item quantity="one">%1$d movie</item>
        <item quantity="two">%1$d movies</item>
        <item quantity="few">%1$d movies</item>
        <item quantity="many">%1$d movies</item>
        <item quantity="other">%1$d movies</item>
    </plurals>

    <plurals name="count_seasons">
        <item quantity="zero">%1$d season</item>
        <item quantity="one">%1$d movie</item>
        <item quantity="two">%1$d seasons</item>
        <item quantity="few">%1$d seasons</item>
        <item quantity="many">%1$d seasons</item>
        <item quantity="other">%1$d seasons</item>
    </plurals>

    <plurals name="count_episodes">
        <item quantity="zero">%1$d episodes</item>
        <item quantity="one">%1$d episode</item>
        <item quantity="two">%1$d episodes</item>
        <item quantity="few">%1$d episodes</item>
        <item quantity="many">%1$d episodes</item>
        <item quantity="other">%1$d episodes</item>
    </plurals>
</resources>