<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragments.search.ChoosingYearMainFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_2"
            app:navigationIconTint="@color/dark_gray"
            app:titleTextAppearance="@style/StandardText">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/toolbar_title"
                style="@style/StandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="Title" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/reset_button"
                style="@style/StandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:paddingStart="26dp"
                android:paddingTop="13dp"
                android:paddingEnd="26dp"
                android:paddingBottom="13dp"
                android:text="@string/reset"
                android:textColor="@color/light_gray" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/text_from"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:text="@string/search_from"
            android:textColor="@color/medium_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_from" />

        <TextView
            android:id="@+id/text_to"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:text="@string/search_to"
            android:textColor="@color/medium_gray"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_pager_from" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/text_to" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply_button"
            style="@style/Widget.AppCompat.Button.Custom"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            android:layout_marginBottom="26dp"
            android:text="@string/apply"
            android:textAllCaps="false"
            android:textAppearance="@style/StandardText"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_pager_to" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
