<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".presentation.fragments.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/application_name_text"
            style="@style/ApplicationNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="38dp"
            android:text="@string/the_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.movies.presentation.views.HorizontalMovieListView
            android:id="@+id/watched_movies_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@+id/application_name_text" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/collection_text_view"
            style="@style/StandardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="25dp"
            android:text="@string/collections"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/watched_movies_list" />

        <LinearLayout
            android:id="@+id/add_collection_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:background="@drawable/background_for_button"
            android:backgroundTint="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/collection_text_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_plus" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/StandardText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="26dp"
                android:text="@string/create_collection" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_marginTop="26dp"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/add_collection_button_layout"
            app:spanCount="2"/>

        <com.example.movies.presentation.views.HorizontalMovieListView
            android:id="@+id/recent_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="47dp"
            app:layout_constraintTop_toBottomOf="@id/recycler_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>